--- a/.github/workflows/helm_repo.yml
+++ b/.github/workflows/helm_repo.yml
@@ -22,9 +22,14 @@ jobs:
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+        env:
+          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+
 
       - name: Install Helm
         uses: azure/setup-helm@v3
+        env:
+          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.5.0
