--- a/.github/workflows/helm_repo.yml
+++ b/.github/workflows/helm_repo.yml
@@ -1,14 +1,9 @@
 name: Release Charts
 
-on:
-  push:
-    branches:
-      - main
+on: [push]
 
 jobs:
   release:
-    # depending on default permission settings for your org (contents being read-only or read-write for workloads), you will have to add permissions
-    # see: https://docs.github.com/en/actions/security-guides/automatic-token-authentication#modifying-the-permissions-for-the-github_token
     permissions:
       contents: write
     runs-on: ubuntu-latest
@@ -25,7 +20,6 @@ jobs:
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
 
-
       - name: Install Helm
         uses: azure/setup-helm@v3
         env:
@@ -33,5 +27,8 @@ jobs:
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.5.0
+        with:
+          charts_dir: charts
+          charts_repo_url: https://mfatrez.github.io/demo1-customer/
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
