--- a/.github/workflows/helm_repo.yml
+++ b/.github/workflows/helm_repo.yml
@@ -4,11 +4,13 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'charts/demo1-customer/Chart.yaml'
 
 jobs:
   release:
     permissions:
-      contents: write
+      contents: write-all
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -20,11 +22,6 @@ jobs:
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-
-      - name: Install Helm
-        uses: azure/setup-helm@v3
-        env:
-          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.5.0
