--- a/.github/workflows/helm_repo.yml
+++ b/.github/workflows/helm_repo.yml
@@ -21,6 +21,11 @@ jobs:
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
+      - name: Install Helm
+        uses: azure/setup-helm@v3.5
+        with:
+          version: v3.8.2
+
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.5.0
         env:
