--- a/helm_charts/demo1-customer/values.yaml
+++ b/helm_charts/demo1-customer/values.yaml
@@ -1,12 +1,8 @@
-# Default values for demo1-customer.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
 replicaCount: 1
 
 image:
   repository: ghcr.io/mfatrez/demo1-customer-container
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   tag: "main"
 
 imagePullSecrets: []
@@ -37,7 +33,8 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 5000
+  externalPort: 80
+  internalPort: 5000
 
 ingress:
   enabled: false
@@ -56,16 +53,6 @@ ingress:
   #      - chart-example.local
 
 resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
 
 autoscaling:
   enabled: false
