--- a/helm_charts/hass/Chart.yaml
+++ b/helm_charts/hass/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: Home Assistant
+name: hass
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
