--- a/.github/workflows/helm_repo.yml
+++ b/.github/workflows/helm_repo.yml
@@ -32,3 +32,16 @@ jobs:
           charts_dir: helm_charts
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+  deploy:
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+    runs-on: ubuntu-latest
+    needs: jekyll-build
+    environment: github-pages
+    url: $
+    steps:
+      - name: Deploy artifact
+        id: deployment
+        uses: actions/deploy-pages@v1
