--- a/.github/workflows/helm_repo.yml
+++ b/.github/workflows/helm_repo.yml
@@ -40,7 +40,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: jekyll-build
     environment: github-pages
-    url: $
+    url: https://mfatrez.github.io/helm-repo
     steps:
       - name: Deploy artifact
         id: deployment
