--- a/.github/workflows/helm_repo.yml
+++ b/.github/workflows/helm_repo.yml
@@ -33,15 +33,23 @@ jobs:
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
   deploy:
+    # Add a dependency to the build job
+    needs: release
+
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
     permissions:
       contents: read
-      pages: write
-      id-token: write
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    # Specify runner + deployment step
     runs-on: ubuntu-latest
-    needs: jekyll-build
-    environment: github-pages
-    url: "https://mfatrez.github.io/helm-repo"
     steps:
-      - name: Deploy artifact
+      - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1
+        uses: actions/deploy-pages@v2 # or the latest "vX.X.X" version tag for this action
