--- a/.github/workflows/helm_repo.yml
+++ b/.github/workflows/helm_repo.yml
@@ -1,9 +1,26 @@
-name: Release Charts
+# ---------------------------------------------------------------------------------------
+# Title: Continuous Delivery (Packaging)
+#
+# Requirements:
+#   - Create manually "gh-pages" branch
+#   - Maintain pages files in "gh-pages" branch: index.tpl, placeholder.png
+#
+# Uses:
+#   - https://github.com/helm/chart-releaser-action
+#   - https://github.com/halkeye/helm-repo-html
+# ---------------------------------------------------------------------------------------
+
+name: PKG
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  workflow_dispatch:
+
+permissions:
+  contents: write
+  pages: write
+  id-token: write
 
 jobs:
   release:
@@ -12,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.1.0
         with:
           fetch-depth: 0
 
@@ -22,9 +39,9 @@ jobs:
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
       - name: Install Helm
-        uses: azure/setup-helm@v3.5
+        uses: azure/setup-helm@v3
         with:
-          version: v3.8.2
+          version: v3.10.1
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.5.0
@@ -32,24 +49,41 @@ jobs:
           charts_dir: helm_charts
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+
+      # important: it needs to be done in the same pipeline as another pages workflow won't be triggered by the pust on the gh-pages branch
+      # (tried with a PAT and several options but didn't work)
+      - name: Checkout gh-pages branch
+        uses: actions/checkout@v3.1.0
+        with:
+          ref: gh-pages
+
+      - name: Setup Go environment
+        uses: actions/setup-go@v3.3.1
+
+      - name: Generate index.html
+        run: |
+          go install github.com/halkeye/helm-repo-html@v0.0.8
+          /home/runner/go/bin/helm-repo-html
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v1
+
+      - name: Build with Jekyll
+        uses: actions/jekyll-build-pages@v1
+        with:
+          source: ./
+          destination: ./_site
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+
   deploy:
-    # Add a dependency to the build job
-    needs: release
-
-    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
-    permissions:
-      contents: read
-      pages: write      # to deploy to Pages
-      id-token: write   # to verify the deployment originates from an appropriate source
-
-    # Deploy to the github-pages environment
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-
-    # Specify runner + deployment step
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2 # or the latest "vX.X.X" version tag for this action
+        uses: actions/deploy-pages@v1
