--- a/.github/workflows/helm_repo.yml
+++ b/.github/workflows/helm_repo.yml
@@ -23,7 +23,7 @@ permissions:
   id-token: write
 
 jobs:
-  release:
+  build:
     permissions:
       contents: write
     runs-on: ubuntu-latest
